Switch stexfires.record to org.jspecify (part 4 - record and fields)